[package]
name = "asim"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Discrete Event Simluation for Async Rust"
repository = "https://github.com/kaimast/asim"

[workspace]
members = ["macros"]

[dependencies]
asim-macros = { path="macros" }
log = "0.4"
futures = "0.3"
parking_lot = "0.12"
tokio = { version="1", features=["sync", "time", "macros", "rt"], default-features=false }
instant = "0.1"
serde = { version="1", features=["derive"] }
async-trait = "0.1"
rand = { version="0.8", optional=true }

[[test]]
name = "speed-test"
path = "tests/speed_test.rs"
required-features = ["network"]

[dev-dependencies]
env_logger = "0.4"

[features]
default = ["network"]
network = ["dep:rand"]
