[package]
name = "asim"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Discrete Event Simluation for Async Rust"
repository = "https://github.com/kaimast/asim"
rust-version = "1.90"

[workspace]
members = ["macros"]

[dependencies]
asim-macros = { path="macros" }
log = "0.4"
futures = "0.3"
parking_lot = "0.12"
tokio = { version="1", features=["sync"], default-features=false }
serde = { version="1", features=["derive"], optional=true }
async-trait = "0.1"
rand = { version="0.9", optional=true }

[[test]]
name = "speed-test"
path = "tests/speed_test.rs"
required-features = ["network"]

[dev-dependencies]
env_logger = "0.11"
rust-hooks = { version="0.12", package="rusty-hooks-integration" }

[features]
default = ["network", "serde"]
network = ["dep:rand"]
